Modified Files: 	apps/Makefile apps/gui/Makefile apps/gui/2chAA/Makefile 	apps/gui/fire/Makefile apps/gui/launcher/Makefile 	apps/gui/noiz2bg/Makefile apps/gui/ps/Makefile 	apps/gui/reversi/Makefile apps/gui/waba/Makefile 	apps/non-gui/Makefile apps/non-gui/bzcat/Makefile 	apps/non-gui/clock/Makefile apps/non-gui/jpegdemo/Makefile 	apps/non-gui/nic/Makefile apps/non-gui/nic/ne2k/Makefile 	apps/non-gui/noiz2bg/Makefile apps/non-gui/reversi/Makefile 	apps/non-gui/tube/Makefile apps/non-gui/waba/Makefile 	bin/Makefile samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/Makefile src/kernel/Makefile src/lib/Makefile 	src/lib/bzip2/Makefile src/lib/gui/Makefile 	src/lib/jpegls/Makefile src/lib/monalibc/Makefile 	src/lib/monapi/Makefile src/servers/Makefile 	src/servers/1linesh/Makefile src/servers/elf/Makefile 	src/servers/file/Makefile src/servers/gui/Makefile 	src/servers/key/Makefile src/servers/mouse/Makefile 	src/servers/shell/Makefile tools/Makefile 	tools/bit2mnf/Makefile tools/elf_tool/Makefile 	tools/fat_write/Makefile tools/monaelf/Makefile Added Files: 	env/monapi-elf.inc Removed Files: 	env/app-elf.inc

--- a/Mona/apps/non-gui/clock/Makefile
+++ b/Mona/apps/non-gui/clock/Makefile
@@ -2,7 +2,7 @@ TARGET  = CLOCK.ELF
 SOURCES = clock.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-elf.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 
