--- a/Mona/src/servers/1linesh/Makefile
+++ b/Mona/src/servers/1linesh/Makefile
@@ -7,7 +7,7 @@ SOURCES         = main.cpp          \
                   CommandHistory.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 
