--- a/Mona/src/servers/elf/Makefile
+++ b/Mona/src/servers/elf/Makefile
@@ -2,7 +2,7 @@ TARGET  = ELF.SVR
 SOURCES = main.cpp elfparser.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc
