--- a/Mona/src/servers/file/Makefile
+++ b/Mona/src/servers/file/Makefile
@@ -2,7 +2,7 @@ TARGET  = FILE.SVR
 SOURCES = main.cpp file.cpp bzip2.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 LINK    = $(LIBDIR)/monapi.o -lbz2 -lmonapi -lmonalibc
