--- a/Mona/src/servers/gui/Makefile
+++ b/Mona/src/servers/gui/Makefile
@@ -2,7 +2,7 @@ TARGET  = GUI.SVR
 SOURCES = main.cpp image.cpp screen.cpp utils.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc -ljpegls
