Modified Files: 	ChangeLog include/monapi/System.h include/monapi/messages.h 	include/sys/types.h src/kernel/Process.cpp 	src/kernel/Process.h src/kernel/elf.cpp src/kernel/kernel.cpp 	src/lib/monapi/System.cpp src/lib/monapi/messages.c 	src/servers/elf/Makefile src/servers/elf/main.cpp Added Files: 	src/servers/elf/ELFServer.h src/servers/elf/ProcessInfo.cpp 	src/servers/elf/ProcessInfo.h 	src/servers/elf/ProcessManager.cpp 	src/servers/elf/ProcessManager.h

--- a/Mona/src/servers/elf/Makefile
+++ b/Mona/src/servers/elf/Makefile
@@ -1,5 +1,5 @@
 TARGET  = ELF.SVR
-SOURCES = main.cpp elfparser.cpp
+SOURCES = main.cpp elfparser.cpp ProcessManager.cpp ProcessInfo.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi-elf.inc
