Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/gui/waba/Makefile apps/non-gui/jpegdemo/Makefile 	bin/root/AUTOEXEC.MSH bin/root/MONA.CFG 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile src/lib/bzip2/Makefile 	src/lib/gui/Makefile src/lib/gui/System/Drawing/Bitmap.cpp 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/jpegls/Makefile src/lib/monapi/messages.c 	src/servers/shell/Shell.h src/servers/shell/main.cpp

--- a/Mona/apps/gui/2chAA/Makefile
+++ b/Mona/apps/gui/2chAA/Makefile
@@ -8,6 +8,6 @@ INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
-$(TARGET): $(LIBDIR)/libgui.a
+$(TARGET).ELF: $(LIBDIR)/libgui.a
 
 include dependencies
