--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -9,6 +9,6 @@ INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
-$(TARGET): $(LIBDIR)/libgui.a
+$(TARGET).ELF: $(LIBDIR)/libgui.a
 
 include dependencies
