--- a/Mona/apps/gui/launcher/Makefile
+++ b/Mona/apps/gui/launcher/Makefile
@@ -8,6 +8,6 @@ INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
-$(TARGET): $(LIBDIR)/libgui.a
+$(TARGET).ELF: $(LIBDIR)/libgui.a
 
 include dependencies
