Modified Files: 	ChangeLog bin/Makefile bin/root/MONA.CFG 	bin/root/APPS/.cvsignore src/servers/gui/Makefile 	src/servers/gui/main.cpp Added Files: 	bin/root/MONAHERE.JPG src/servers/gui/STARTGUI.MSH

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -2,7 +2,7 @@ TARGET = mona.img
 
 ROOT_FILES = `cd root; ls *.*`
 SVR_FILES  = `cd root; ls SERVERS/*.SVR`
-APP_FILES  = `cd root; ls APPS/*.EL* APPS/*.LIB APPS/*.WRP`
+APP_FILES  = `cd root; ls APPS/*.EL* APPS/*.LIB APPS/*.WRP APPS/*.MSH`
 
 all:
 	cp fat_template.img $(TARGET)
