--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -10,6 +10,6 @@ SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/SHELL.SVR
 
-WALLPAPER_SOURCE=/STARTING.JPG
-WALLPAPER_POSITION=9
-WALLPAPER_TRANSPARENT=FEFEFE
+WALLPAPER_SOURCE=/MONAHERE.JPG
+WALLPAPER_POSITION=5
+#WALLPAPER_TRANSPARENT=FEFEFE
