Modified Files: 	bin/root/MONA.CFG include/gui/messages.h 	src/servers/gui/STARTGUI.MSH src/servers/gui/main.cpp 	src/servers/shell/main.cpp

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -13,3 +13,6 @@ SERVER=/SERVERS/SHELL.SVR
 WALLPAPER_SOURCE=/MONAHERE.JPG
 WALLPAPER_POSITION=5
 #WALLPAPER_TRANSPARENT=FEFEFE
+WALLPAPER_BACKGROUND=000000
+
+GUISERVER_STARTUP=/APPS/LAUNCHER.EL2
