Modified Files: 	ChangeLog apps/gui/ps/Makefile src/servers/shell/Makefile 	src/servers/shell/Shell.h src/servers/shell/main.cpp Added Files: 	src/servers/shell/InternalCommands.cpp 	src/servers/shell/Shell.cpp

--- a/Mona/src/servers/shell/Makefile
+++ b/Mona/src/servers/shell/Makefile
@@ -1,5 +1,5 @@
 TARGET  = SHELL.SVR
-SOURCES = main.cpp
+SOURCES = main.cpp Shell.cpp InternalCommands.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi-elf.inc
