for coexistence with new shell and old shell
Modified Files:
	bin/root/MONA.CFG src/servers/Makefile
	src/servers/shell/.cvsignore
Added Files:
	src/servers/shell/Makefile.old

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -8,7 +8,7 @@ SERVER=/SERVERS/FILE.SVR
 SERVER=/SERVERS/ELF.SVR
 SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
-SERVER=/SERVERS/SHELL.SVR
+SERVER=/SERVERS/OLDSHELL.SVR
 
 WALLPAPER_SOURCE=/MONAHERE.JPG
 WALLPAPER_POSITION=5
