--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -2,6 +2,7 @@ all:
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
+	@cd shell; $(MAKE) -f Makefile.old $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
@@ -11,6 +12,7 @@ install:
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
+	@cd shell; $(MAKE) -f Makefile.old $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
@@ -20,6 +22,7 @@ clean: touchdepend
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
+	@cd shell; $(MAKE) -f Makefile.old $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
@@ -28,7 +31,7 @@ clean: touchdepend
 depend: touchdepend
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
-#	@cd shell; $(MAKE) $@
+	@cd shell; $(MAKE) -f Makefile.old $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
@@ -37,7 +40,7 @@ depend: touchdepend
 distclean:
 	rm -f key/dependencies
 	rm -f mouse/dependencies
-#	rm -f shell/dependencies
+	rm -f shell/dependencies
 	rm -f gui/dependencies
 	rm -f 1linesh/dependencies
 	rm -f file/dependencies
@@ -46,7 +49,7 @@ distclean:
 touchdepend:
 	touch key/dependencies
 	touch mouse/dependencies
-#	touch shell/dependencies
+	touch shell/dependencies
 	touch gui/dependencies
 	touch 1linesh/dependencies
 	touch file/dependencies
