--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -15,4 +15,5 @@ WALLPAPER_POSITION=5
 #WALLPAPER_TRANSPARENT=FEFEFE
 WALLPAPER_BACKGROUND=000000
 
+GUISERVER_STARTUP=/APPS/GSHELL.EL2
 GUISERVER_STARTUP=/APPS/LAUNCHER.EL2
