Support Timer in MonaGUI
Modified Files:
	ChangeLog apps/gui/2chAA/Form1.cpp apps/gui/shell/Form1.cpp
	include/gui/System/Mona/Forms/Control.h
	include/monapi/cmessage.h src/lib/gui/Makefile
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/monapi/cmessage.c src/servers/shell/main.cpp
Added Files:
	include/gui/System/Mona/Forms/Timer.h
	src/lib/gui/System/Mona/Forms/Timer.cpp

--- a/Mona/src/lib/gui/Makefile
+++ b/Mona/src/lib/gui/Makefile
@@ -12,6 +12,7 @@ SOURCES = \
 	System/Mona/Forms/ControlPaint.cpp \
 	System/Mona/Forms/Form.cpp \
 	System/Mona/Forms/Label.cpp \
+	System/Mona/Forms/Timer.cpp \
 	System/Text/Encoding.cpp
 
 MONADIR = ../../..
