support resizing wall paper
Modified Files:
	ChangeLog bin/root/MONA.CFG include/gui/messages.h
	src/servers/gui/image.cpp src/servers/gui/image.h
	src/servers/gui/main.cpp

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -1,8 +1,13 @@
+## VESA
+
 # 1600(x1200), 1280(x1024), 1024(x768), 800(x600), 640(x480), 320(x200)
 VESA_RESOLUTION=800
 
 # 16, 24, 32
 VESA_BPP=16
+
+
+## Servers
 
 SERVER=/SERVERS/FILE.SVR
 SERVER=/SERVERS/ELF.SVR
@@ -10,10 +15,24 @@ SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/OLDSHELL.SVR
 
+
+## Wallpaper
+
 WALLPAPER_SOURCE=/MONAHERE.JPG
-WALLPAPER_POSITION=5
+
+# 0: stretch screen
+# +-----+
+# |1 2 3|
+# |4 5 6|
+# |7 8 9|
+# +-----+
+WALLPAPER_POSITION=0
+
 #WALLPAPER_TRANSPARENT=FEFEFE
-WALLPAPER_BACKGROUND=000000
+#WALLPAPER_BACKGROUND=000000
+
+
+## GUI Server
 
 GUISERVER_STARTUP=/APPS/GSHELL.EL2
 GUISERVER_STARTUP=/APPS/LAUNCHER.EL2
