Modified Files: 	bin/root/MONA.CFG

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -20,7 +20,7 @@ SERVER=/SERVERS/OLDSHELL.SVR
 
 WALLPAPER_SOURCE=/MONAHERE.JPG
 
-# 0: stretch screen
+# 0: stretch to screen
 # +-----+
 # |1 2 3|
 # |4 5 6|
