--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -1,10 +1,10 @@
 ## VESA
 
 # 1600(x1200), 1280(x1024), 1024(x768), 800(x600), 640(x480), 320(x200)
-VESA_RESOLUTION=800
+VESA_RESOLUTION=1024
 
 # 16, 24, 32
-VESA_BPP=16
+VESA_BPP=32
 
 
 ## Servers
@@ -20,7 +20,7 @@ SERVER=/SERVERS/OLDSHELL.SVR
 
 WALLPAPER_SOURCE=/MONAHERE.JPG
 
-# 0: stretch to screen
+# 0: stretch screen
 # +-----+
 # |1 2 3|
 # |4 5 6|
