--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -36,3 +36,4 @@ WALLPAPER_POSITION=0
 
 GUISERVER_STARTUP=/APPS/GSHELL.EL2
 GUISERVER_STARTUP=/APPS/LAUNCHER.EL2
+GUISERVER_STARTUP=/APPS/CLOCK.EL2
