remove cmessage and clist
Modified Files:
	ChangeLog apps/gui/shell/Form1.cpp include/monapi/Message.h
	include/monapi/messages.h
	src/lib/gui/System/Drawing/Bitmap.cpp
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/gui/System/Mona/Forms/Form.cpp
	src/lib/gui/System/Mona/Forms/Timer.cpp
	src/lib/monapi/Makefile src/lib/monapi/Message.cpp
	src/lib/monapi/System.cpp src/lib/monapi/syscall.cpp
	src/servers/elf/ProcessManager.cpp src/servers/elf/main.cpp
	src/servers/file/main.cpp src/servers/gui/image.cpp
	src/servers/gui/main.cpp src/servers/gui/screen.cpp
	src/servers/key/main.cpp src/servers/mouse/main.cpp
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp src/servers/shell/main.cpp
Added Files:
	src/lib/monapi/cmemoryinfo.cpp src/lib/monapi/messages.cpp
Removed Files:
	include/monapi/clist.h include/monapi/cmessage.h
	src/lib/monapi/clist.c src/lib/monapi/cmemoryinfo.c
	src/lib/monapi/cmessage.c src/lib/monapi/messages.c

--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -17,8 +17,9 @@ SOURCES = string.cpp \
           System.cpp \
           VirtualScreen.cpp \
           mt19937ar.cpp \
-          Keys.cpp
-CSOURCES = clist.c cmessage.c cmemoryinfo.c messages.c
+          Keys.cpp \
+          messages.cpp \
+          cmemoryinfo.cpp
 
 MONADIR  = ../../..
 include $(MONADIR)/env/dirnames.inc
@@ -41,16 +42,11 @@ $(TARGET2) : $(OBJECTS)
 .cpp.o:
 	$(CXX) -c $(CXXFLAGS) $(INCLUDE) $<
 
-.SUFFIXES: .c .o
-.c.o:
-	$(CC) -c $(CFLAGS) $(INCLUDE) $<
-
 clean :
 	rm -f $(TARGET1) $(TARGET2) $(OBJECTS)
 
 depend:
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) monapi.cpp $(SOURCES) > dependencies
-	$(CC) -MM $(INCLUDE) $(CFLAGS) $(CSOURCES) >> dependencies
 
 install: $(TARGET1) $(TARGET2)
 
