support Z-Order and alpha blending window for GUI.SVR
Modified Files:
	ChangeLog apps/gui/clock/Form1.cpp apps/gui/cube/dependencies
	apps/gui/launcher/Form1.cpp apps/gui/ps/Form1.cpp
	apps/gui/shell/Form1.cpp include/gui/messages.h
	include/gui/System/Drawing/Bitmap.h
	include/gui/System/Mona/Forms/Control.h
	include/gui/System/Mona/Forms/Form.h
	src/lib/gui/System/Drawing/Bitmap.cpp
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/gui/System/Mona/Forms/Form.cpp
	src/servers/gui/Makefile src/servers/gui/image.cpp
	src/servers/gui/image.h src/servers/gui/main.cpp
	src/servers/gui/screen.cpp src/servers/gui/screen.h
	src/servers/gui/utils.cpp src/servers/gui/utils.h
Added Files:
	src/servers/gui/Rectangle.cpp src/servers/gui/window.cpp
	src/servers/gui/window.h

--- a/Mona/src/servers/gui/Makefile
+++ b/Mona/src/servers/gui/Makefile
@@ -1,5 +1,5 @@
 TARGET  = GUI.SVR
-SOURCES = main.cpp image.cpp screen.cpp utils.cpp
+SOURCES = main.cpp image.cpp screen.cpp utils.cpp window.cpp Rectangle.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
