Modified Files: 	ChangeLog apps/gui/anaclock/dependencies apps/gui/ps/Form1.cpp 	bin/root/MONA.CFG include/gui/messages.h 	include/gui/System/Mona/Forms/Form.h include/monapi/messages.h 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/gui/System/Mona/Forms/Form.cpp src/lib/monapi/Makefile 	src/servers/elf/ProcessManager.cpp 	src/servers/elf/ProcessManager.h src/servers/elf/main.cpp 	src/servers/gui/Makefile src/servers/gui/main.cpp 	src/servers/gui/screen.cpp src/servers/gui/window.cpp 	src/servers/mouse/main.cpp Added Files: 	bin/root/MONAGUI.INI src/servers/gui/Overlap.cpp 	src/servers/gui/Overlap.h

--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -26,7 +26,7 @@ include $(MONADIR)/env/dirnames.inc
 include $(MONADIR)/env/Makefile.inc
 
 INCLUDE = -I$(INCDIR)
-OBJECTS = $(SOURCES:.cpp=.o) $(CSOURCES:.c=.o)
+OBJECTS = $(SOURCES:.cpp=.o)
 
 all : $(TARGET1) $(TARGET2)
 
