Modified Files: 	ChangeLog bin/root/MONAGUI.INI 	include/gui/System/Mona/Forms/Form.h 	src/lib/gui/System/Mona/Forms/Control.cpp 	src/lib/gui/System/Mona/Forms/Form.cpp 	src/servers/gui/main.cpp src/servers/gui/window.cpp

--- a/Mona/bin/root/MONAGUI.INI
+++ b/Mona/bin/root/MONAGUI.INI
@@ -14,3 +14,13 @@ Position=0
 
 rem TransparencyKey=FEFEFE
 rem BackColor=000000
+
+[Window Effect]
+rem 0: off
+rem 1: simple expansion
+Creation=1
+
+rem 0: off
+rem 1: simple reduction
+rem 2: explosion
+Destruction=2
