Modified Files: 	apps/gui/kukuri/.cvsignore apps/gui/kukuri/Makefile Added Files: 	apps/gui/kukuri/kukuri.bmp

--- a/Mona/apps/gui/kukuri/Makefile
+++ b/Mona/apps/gui/kukuri/Makefile
@@ -1,13 +1,19 @@
 TARGET  = KUKURI
 SOURCES = Form1.cpp
 
+INSTDIR    = $(BINDIR)/root/APPS/KUKURI.APP
+INSTFILES  = KUKURI.BM2
+CLEANFILES = $(INSTFILES)
+
 MONADIR = ../../..
 include $(MONADIR)/env/monapi-el2.inc
 
-INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
-$(TARGET).ELF: $(LIBDIR)/libgui.a
+$(TARGET).ELF: $(LIBDIR)/libgui.a $(INSTFILES)
+
+KUKURI.BM2: kukuri.bmp
+	bzip2 -c $< > $@
 
 include dependencies
