Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/anaclock/Makefile 	apps/gui/clock/Makefile apps/gui/cube/Makefile 	apps/gui/fire/Makefile apps/gui/kukuri/Makefile 	apps/gui/launcher/Makefile apps/gui/mtorz/Makefile 	apps/gui/noiz2bg/Makefile apps/gui/ps/Makefile 	apps/gui/reversi/Makefile apps/gui/shell/Makefile 	apps/gui/waba/Makefile apps/non-gui/jpegdemo/Makefile 	env/monapi-el2.inc env/monapi-elf.inc env/monapi.inc 	include/gui/messages.h samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	src/lib/monapi/Makefile src/lib/monapi/monapi.cpp 	src/servers/elf/Makefile src/servers/file/Makefile 	src/servers/gui/Makefile src/servers/gui/effect.cpp 	src/servers/gui/window.cpp Added Files: 	src/lib/monapi/monapi_impl.cpp

--- a/Mona/apps/gui/reversi/Makefile
+++ b/Mona/apps/gui/reversi/Makefile
@@ -7,7 +7,7 @@ INSTFILES = RED.BMP WHITE.BMP
 MONADIR = ../../..
 include $(MONADIR)/env/monapi-el2.inc
 
-LINK      = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
+LINK      = -lgui -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
 $(TARGET).ELF: $(LIBDIR)/libgui.a
