--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -6,7 +6,7 @@ MONADIR = ../../..
 include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
-LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
+LINK    = -lgui -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
 $(TARGET).ELF: $(LIBDIR)/libgui.a
