--- a/Mona/apps/gui/waba/Makefile
+++ b/Mona/apps/gui/waba/Makefile
@@ -7,7 +7,7 @@ INSTFILES = WABA.LIB HELLO.WRP
 MONADIR = ../../..
 include $(MONADIR)/env/monapi-el2.inc
 
-LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
+LINK    = -lgui -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
 $(TARGET).ELF: $(LIBDIR)/libgui.a
