--- a/Mona/bin/root/MONAGUI.INI
+++ b/Mona/bin/root/MONAGUI.INI
@@ -1,5 +1,5 @@
 [General]
-Run=/APPS/MONAFILE.APP/MONAFILE.EL2,/APPS/GSHELL.EL2,/APPS/LAUNCHER.EL2
+Run=/APPS/MONAFILE.APP/MONAFILE.EL2,/APPS/GSHELL.EL2
 
 [Wallpaper]
 Source=/MONAHERE.JPG
