--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -6,6 +6,6 @@ VESA_BPP=16
 
 SERVER=/SERVERS/FILE.SVR
 SERVER=/SERVERS/ELF.SVR
-SERVER=/SERVERS/KEYBDMNG.SVR
+SERVER=/SERVERS/KEYBDMNG.BIN
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/OLDSHELL.SVR
