--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -4,8 +4,8 @@ VESA_RESOLUTION=800
 # 16, 24, 32
 VESA_BPP=16
 
-SERVER=/SERVERS/FILE.SVR
-SERVER=/SERVERS/ELF.SVR
+SERVER=/SERVERS/FILE.BIN
+SERVER=/SERVERS/ELF.BIN
 SERVER=/SERVERS/KEYBDMNG.BIN
-SERVER=/SERVERS/MOUSE.SVR
-SERVER=/SERVERS/OLDSHELL.SVR
+SERVER=/SERVERS/MOUSE.BIN
+SERVER=/SERVERS/OLDSHELL.BIN
