--- a/Mona/src/servers/file/Makefile
+++ b/Mona/src/servers/file/Makefile
@@ -1,8 +1,8 @@
-TARGET  = FILE.SVR
+TARGET  = FILE.BIN
 SOURCES = main.cpp file.cpp bzip2.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi-elf.inc
+include $(MONADIR)/env/monapi-bin.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 LINK    = -lbz2 -lmonapi -lmonalibc
