--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -8,6 +8,6 @@ SERVER=/SERVERS/FILE.BIN
 SERVER=/SERVERS/ELF.BIN
 SERVER=/SERVERS/KEYBDMNG.BIN
 SERVER=/SERVERS/MOUSE.BIN
-SERVER=/SERVERS/MONITER.BIN
+#SERVER=/SERVERS/MONITER.BIN
 SERVER=/SERVERS/OLDSHELL.BIN
 
