--- a/Mona/apps/non-gui/Makefile
+++ b/Mona/apps/non-gui/Makefile
@@ -9,6 +9,7 @@ all:
 	@cd bzcat; $(MAKE) $@
 	@cd monamona; $(MAKE) $@
 	@cd pciinfo; $(MAKE) $@
+	@cd ata; $(MAKE) $@
 
 install:
 	@cd noiz2bg; $(MAKE) $@
@@ -21,6 +22,7 @@ install:
 	@cd bzcat; $(MAKE) $@
 	@cd monamona; $(MAKE) $@
 	@cd pciinfo; $(MAKE) $@
+	@cd ata; $(MAKE) $@
 
 clean: touchdepend
 	@cd noiz2bg; $(MAKE) $@
@@ -33,6 +35,7 @@ clean: touchdepend
 	@cd bzcat; $(MAKE) $@
 	@cd monamona; $(MAKE) $@
 	@cd pciinfo; $(MAKE) $@
+	@cd ata; $(MAKE) $@
 
 depend: touchdepend
 	@cd noiz2bg; $(MAKE) $@
@@ -44,6 +47,7 @@ depend: touchdepend
 	@cd bzcat; $(MAKE) $@
 	@cd monamona; $(MAKE) $@
 	@cd pciinfo; $(MAKE) $@
+	@cd ata; $(MAKE) $@
 
 distclean:
 	rm -f noiz2bg/dependencies
@@ -54,6 +58,7 @@ distclean:
 	rm -f bzcat/dependencies
 	rm -f monamona/dependencies
 	rm -f pciinfo/dependencies
+	rm -f ata/dependencies
 	@cd nic; $(MAKE) $@
 
 touchdepend:
@@ -65,3 +70,4 @@ touchdepend:
 	touch bzcat/dependencies
 	touch monamona/dependencies
 	touch pciinfo/dependencies
+	touch ata/dependencies
